<resources>
    <string name="app_name">Renta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="facebook_app_id">432400493788973</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="first_name">First Name</string>
    <string name="phone">phone</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="add_offer">Add Offer</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string-array name="District">
        <item>District 1</item>
        <item>District 2</item>
        <item>District 3</item>
        <item>District 4</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">WELCOME TO AYN ASHYAE</string>
    <string name="slide_1_desc">Everything You Need In One Place!</string>
    <string name="slide_2_title">ANYTHING .. ANYTIME</string>
    <string name="slide_2_desc">Find Anything You Need In Our Various Categories!</string>
    <string name="slide_3_title">BUY .. RENT .. SELL</string>
    <string name="slide_3_desc">Everything You Need Is Now Yours!</string>
    <string name="slide_4_title">SECURE</string>
    <string name="slide_4_desc">Enjoy A High Security Level By Dealing In Closed Communities!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="_1000"><![CDATA[<1000]]></string>
    <string name="_1000_3000">1000-3000</string>
    <string name="_3000"><![CDATA[3000<]]></string>
    <string-array name="category">
        <item>Vehicles</item>
    </string-array>
    <string-array name="subcategory">
        <item>Cars</item>
        <item>Trucks</item>
        <item>Motorcycles\n&amp;Scooters</item>
        <item>Heavy Equipment</item>
        <item>Vehicles Parts</item>
        <item>Watercrafts</item>
    </string-array>
</resources>