<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp">


                <!--Category text-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Category"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"/>
                </android.support.design.widget.TextInputLayout>

                <!--Category spinner-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/categorySpinnerID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:spinnerMode="dialog">
                    </Spinner>
                </android.support.design.widget.TextInputLayout>


                <!--Sub-Category text-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sub-Category"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp" />
                </android.support.design.widget.TextInputLayout>

                <!--Sub-Category spinner-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/subcategorySpinnerID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:spinnerMode="dialog">
                    </Spinner>
                </android.support.design.widget.TextInputLayout>

                <!--State text-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="State"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"/>
                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Buy"
                        android:layout_marginBottom="10dp"/>

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Rent"
                        android:layout_marginBottom="10dp"
                        android:checked="true"/>
                </RadioGroup>

                <!--District text-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="District"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"/>
                </android.support.design.widget.TextInputLayout>

                <!--Region spinner-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/districtSpinnerID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:spinnerMode="dialog">
                    </Spinner>
                </android.support.design.widget.TextInputLayout>


                <!--Condition text-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Condition"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/newCheckBoxID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New"
                    android:layout_marginBottom="10dp"/>

                <CheckBox
                    android:id="@+id/usedCheckBoxID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Used"
                    android:layout_marginBottom="10dp"
                    android:checked="true"/>

                <!--has photo text-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="has photo"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/yesCheckBoxID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yes"
                    android:layout_marginBottom="10dp"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/noCheckBoxID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No"
                    android:layout_marginBottom="10dp"/>

                <!--Price text-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Price"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/lessThanThousandID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1000"
                    android:layout_marginBottom="10dp"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/betweenThousandAndThreeThousandID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1000_3000"
                    android:layout_marginBottom="10dp"/>
                <CheckBox
                    android:id="@+id/moreThan3000ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_3000"
                    android:layout_marginBottom="10dp"
                    />


                <!--Search Button-->
                <Button
                    android:id="@+id/searchBtnId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="searchBtnFun"
                    android:text="Search"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white" />


            </LinearLayout>



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
